# django_poetry_example

./: .gitignore  pyproject.toml  render.yaml
django_poetry_example/: settings.py  urls.py
render/templates/render/: index.html
