[tool.poetry]
name = "django_poetry_example"
version = "0.1.0"
description = "Example of Django+Poetry+Render"
authors = ["John Wesonga"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
